[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbeml"
version = "0.0.1"
authors = [
  { name="Ralf Meyer", email="meyer.ralf@yahoo.com" },
]
description = "Utilities for the many-body expansion based ML modelling of TMC properties"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas==2.0.3",
  "tensorflow==2.12.1",
  "scikit-learn==1.3.1",
  "hyperopt==0.2.7",
  "matplotlib==3.7.5",
  "pytest",
]

[tool.setuptools]
packages = ["mbeml"]